9-network-policies/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: microservice
  name: microservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: microservice
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: microservice
    spec:
      containers:
      - image: nj93/k8s-demo-container:latest
        name: k8s-demo-container
        ports:
        - containerPort: 8080
        resources: {}
status: {}
